# uam-territorial-suitability

./: .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/scripts/: classify_site_types.py  compute_batch_osm_criteria.py  compute_weighted_criteria.py  screen_heliports.py
backend/src/uam_territorial_suitability/: aggregation.py  criteria.py  criteria_airspace.py  criteria_geometry.py  criteria_land_use.py  criteria_obstacles.py  criteria_proximity.py  criteria_topography.py  data_sources.py  main.py  osm_batch.py  osm_fetch.py  report.py  settings.py  site_type.py  topography_broad.py
backend/src/uam_territorial_suitability/api/: routes.py
backend/tests/: test_aggregation.py  test_api_aptitude.py  test_api_aptitude_report.py  test_api_site_type.py  test_criteria_airspace.py  test_criteria_geometry.py  test_criteria_land_use.py  test_criteria_obstacles.py  test_criteria_proximity.py  test_criteria_topography.py  test_health.py  test_max_supportable_d.py  test_osm_batch.py  test_osm_fetch.py  test_osm_fetch_proximity.py  test_site_type.py  test_topography_broad.py
frontend/: package-lock.json
frontend/src/app/: page.tsx
frontend/src/components/: AptitudeMap.tsx  AptitudeMapClient.tsx
