[project]
name = "uam-territorial-suitability"
version = "0.1.0"
description = "Computational tool for territorial suitability assessment of UAM vertiport sites (Módulo 02 of the UAM Planning Framework thesis)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Marcelo Saraiva Peres" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "geopandas>=1.0",
    "shapely>=2.0",
    "rasterio>=1.3",
    "pyproj>=3.6",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uam_territorial_suitability"]
